--- a/docker-home-switch/Dockerfile-alpine
+++ b/docker-home-switch/Dockerfile-alpine
@@ -1,11 +1,11 @@
 ##
 # phantomjs python Flask selenium and littlewey/home-switch
 ##
-FROM python:2.7.13-jessie
+FROM python:2.7.13-alpine3.4
 MAINTAINER littlewey, forked from https://github.com/littlewey/home-switch/tree/master/docker-home-switch
 USER root
-RUN apt-get update -y && apt-get install -y  \
-       python-pip \
+RUN apk update && apk add --no-cache  \
+       py-pip \
        fontconfig \
        wget \
     && pip install -U pip \
@@ -13,13 +13,14 @@ RUN apt-get update -y && apt-get install -y  \
     && mkdir -p /app \
     && mkdir -p /usr/share \
     && cd /usr/share \
-    && wget https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2  \
+    && wget https://github.com/Overbryd/docker-phantomjs-alpine/releases/download/2.11/phantomjs-alpine-x86_64.tar.bz2  \
     && tar xjf phantomjs*.tar.bz2 \
-    && ln -s /usr/share/phantomjs-2.1.1-linux-x86_64/bin/phantomjs /usr/bin/phantomjs \
+    && ln -s /usr/share/phantomjs/phantomjs /usr/bin/phantomjs \
     && rm phantom*.bz2 \
     && phantomjs --version \
+    && apk del wget \
     && echo "root:root" | chpasswd \
-    && rm -rf /var/lib/apt/lists/* \
+    && rm -rf /var/cache/apk/* \
     && rm -rf ~/.cache/pip 
 EXPOSE 5000
 ADD docker-resource/app.py /app
